# your_own_typesafe_api_dsl

./: Makefile  README.md  dune-project  your_own_typesafe_api_dsl.opam
api_documentation/: README.md
api_documentation/server/: README.md
app/: dune  home.eml  main.ml
backend/: main.ml
backend/api/: generated_endpoints.ml  generated_types.ml  handlers.ml  server_sent_events.ml
bindings/TypeScript/lib/event-source-with-headers/src/: browser.ts
bindings/TypeScript/src/: utils.ts
codegen/: dune  main.ml
codegen/api_spec/: dune  endpoints.ml  t.ml  types.ml
frontend/: index.ts  package-lock.json
frontend/bindings/TypeScript/src/: index.ts  utils.ts
lib/api/: auth.ml  dune  generated_endpoints.ml  generated_types.ml  handlers.ml
lib/gen_endpoints/: ast.ml  dsl.ml  gen_documentation.ml  gen_ocaml_endpoints.ml  gen_ts_bindings.ml  types.ml
lib/gen_types/: ast.ml  dsl.ml  gen_documentation.ml  gen_ocaml.ml  gen_typescript.ml  types.ml
lib/ppx_deriving_query/: ppx_deriving_query_parser.ml
sdks/TypeScript/src/: browser.ts
test/: dune  test.ml
